--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,32 +1,46 @@
 {
     "comments": {
-        // symbol used for single line comment. Remove this entry if your language does not support line comments
         "lineComment": "--",
-        // symbols used for start and end a block comment. Remove this entry if your language does not support block comments
-        "blockComment": [ "--[[", "]]" ]
+        "blockComment": ["--[[", "]]"]
     },
-    // symbols used as brackets
     "brackets": [
         ["{", "}"],
         ["[", "]"],
         ["(", ")"]
     ],
-    // symbols that are auto closed when typing
     "autoClosingPairs": [
-        ["do", "end"],
-        ["{", "}"],
-        ["[", "]"],
-        ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
-    ],
-    // symbols that can be used to surround a selection
-    "surroundingPairs": [
-        ["do", "end"],
+        ["--[[", "    ]]"],
+        ["do", "    end"],
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
         ["s'", "'"]
+    ],
+    "surroundingPairs": [
+        ["--[[", "    ]]"],
+        ["do", "    end"],
+        ["{", "}"],
+        ["[", "]"],
+        ["(", ")"],
+        ["\"", "\""],
+        ["s'", "'"]
+    ],
+    "onEnterRules": [
+        {
+            "beforeText": "(^|\\s)do(\\s|$)",
+            "afterText": "^\\s*end\\b",
+            "action": {
+                "indent": "indent",
+                "indentAction": 2
+            }
+        },
+        {
+            "beforeText": "(^|\\s)do(\\s|$)",
+            "action": {
+                "indent": "indent",
+                "indentAction": 1
+            }
+        }
     ]
 }
