--- a/language-configuration.json
+++ b/language-configuration.json
@@ -9,7 +9,7 @@
         ["(", ")"]
     ],
     "autoClosingPairs": [
-        ["--[[", "    ]]"],
+        ["--[[", " ]]"],
         ["do", "    end"],
         ["{", "}"],
         ["[", "]"],
@@ -18,8 +18,9 @@
         ["s'", "'"]
     ],
     "surroundingPairs": [
-        ["--[[", "    ]]"],
-        ["do", "    end"],
+        ["--[[", " ]]"],
+        ["do", " end"],
+        ["for", " out"],
         ["{", "}"],
         ["[", "]"],
         ["(", ")"],
