--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nikosharp",
   "displayName": "NikoSharp",
   "description": "NikoSharp Programming Language",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.98.0"
   },
@@ -20,6 +20,13 @@
       "language": "nikos",
       "scopeName": "source.nikos",
       "path": "./syntaxes/nikos.tmLanguage.json"
-    }]
+    }],
+    "themes": [
+        {
+            "label": "NikoSharp Default Theme",
+            "uiTheme": "vs-dark",
+            "path": "./themes/nikos-color-theme.json"
+        }
+    ]
   }
 }
